--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests==2.18.1
-peewee==2.10.1
-tornado==4.5.1
-tweepy==3.5.0
-psycopg2==2.7.3
-python-dateutil==2.6.1
-numpy==1.13.1
+requests==2.26.0
+peewee==3.14.8
+tornado==6.1
+tweepy==4.1.0
+psycopg2-binary==2.9.1
+python-dateutil==2.8.2
+numpy==1.21.3
